# GoIt

./: README.md  auto.py  example.py  sort_podbor.py
Python_web/modul11/hometask/: main.py  pyproject.toml
Python_web/modul11/hometask/migrations/versions/: 4dc4c8331c42_init.py
Python_web/modul11/hometask/src/: schemas.py
Python_web/modul11/hometask/src/database/: models.py
Python_web/modul11/hometask/src/repository/: contacts.py
Python_web/modul11/hometask/src/routes/: contacts.py
Python_web/modul11/lection/part2/: main.py  pyproject.toml
Python_web/modul11/lection/part2/src/database/: models.py
Python_web/modul11/lection/part2/src/repository/: cats.py
Python_web/modul11/lection/part2/src/routes/: cats.py  owners.py
Python_web/modul13/: main.py
Python_web/modul3/: clean.py  factorize.py  factorize_asihron.py
Python_web/modul5/: main.py  main2.py
Python_web/modul6/: change_to_table.py  create_table.py  db_connection.py  insert_to_table.py  main.py  select_to_table.py  update_table.py
Python_web/modul7/: core_exaple.py  session_async_example.py  session_example.py  session_new_example.py
modul10/: AdressBook_Record.py  homework.py  parser.py  parser2.py
modul11/: 11.py  AdressBook_Record.py  parser11.py
modul12/: 5.py  AdressBook_Record.py  parser111.py
modul7/: 10_17.py  11_17.py  12_17.py  13_17.py  14_17.py  15_17.py  16_17.py  17_17.py  4_17.py  5_17.py  6_17.py  7_17.py  8_17.py  8_1_17.py  9_17.py
modul7/clean_folder/: setup.py
modul8/birthday/: birthday.py  birthday.txt  birthday1.py
modul9/hometask9/: parser_command.py
(+154 files in other folders)
