[tool.poetry]
name = "hometask"
version = "0.1.0"
description = ""
authors = ["olhaishchenko <olga.ua.olga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
alembic = "^1.10.2"
sqlalchemy = "^2.0.8"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.7"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
